# SimpleBotLogic

./: CMakeLists.txt  colcon.pkg  package.xml  pixi.toml
src/: simplebotlogicnode.cpp  simplebotlogicnode.hpp
